# bearbuild

./: Cargo.toml
src/: config.rs  detect.rs  emit.rs  error.rs  graph.rs  main.rs
