[package]
name = "bearbuild"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 3 # lower = longer compile but more optimized

[profile.small]
opt-level = "z"
lto = "fat"
codegen-units = 3
strip = true
inherits = "release"
